--- a/index.html
+++ b/index.html
@@ -532,7 +532,8 @@ year = {2023}
     <section id="acknowledgment"/>
         <h2>Acknowledgment</h2>
         <hr>
-        <p>The authors would like to thank <a href="https://jme.pub">Janick Martinez Esturo</a>, <a href="https://www.linkedin.com/in/evgeny-toropov-9bb14210b/">Evgeny Toropov</a>, <a href="https://www.linkedin.com/in/chen-chen-00499624/">Chen Chen</a> for support on data processing pipeline, and <a href="https://www.linkedin.com/in/linasong/">Lina Halper</a>, <a href="https://zhengyiluo.github.io">Zhengyi Luo</a>, <a href="https://www.linkedin.com/in/kelly-guo-18316982/?originalSubdomain=ca">Kelly Guo</a>, <a href="https://www.linkedin.com/in/gavstate/?originalSubdomain=ca">Gavriel State</a> for the help on creating the edited scenes. 
+        <p>The authors appreciate the support from <a href="https://jme.pub">Janick Martinez Esturo</a>, <a href="https://www.linkedin.com/in/evgeny-toropov-9bb14210b/">Evgeny Toropov</a>, <a href="https://www.linkedin.com/in/chen-chen-00499624/">Chen Chen</a> on the data processing pipeline, and the help from <a href="https://www.linkedin.com/in/linasong/">Lina Halper</a>, <a href="https://zhengyiluo.github.io">Zhengyi Luo</a>, <a href="https://www.linkedin.com/in/kelly-guo-18316982/?originalSubdomain=ca">Kelly Guo</a>, <a href="https://www.linkedin.com/in/gavstate/?originalSubdomain=ca">Gavriel State</a> on creating the edited scenes. 
+        We would also like to thank the authors of <a href="https://4dqv.mpi-inf.mpg.de/NeRF-OSR/">NeRF-OSR</a> for communication on experiment details. 
         </p>
     </section>
 
